<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="310dp"
        android:layout_height="242dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/logo_image"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/edt_emailText"
        android:layout_width="fill_parent"
        android:text="zensoltech@gmail.com"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"

        android:layout_marginEnd="8dp"
        android:contentDescription="@string/email_text"
        android:ems="10"
        android:hint="@string/edt_email_text"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:layout_below="@+id/imageView" />

    <EditText
        android:id="@+id/edt_passwordText"
        android:text="password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/password_text"
        android:ems="10"
        android:hint="@string/edt_password_text"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        android:layout_below="@+id/edt_emailText" />

    <Button
        android:id="@+id/btn_login"
        android:layout_below="@+id/edt_passwordText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_blue_dark"
        android:contentDescription="@string/btn_login"
        android:padding="16dp"
        android:text="Login "
        android:textColor="@android:color/white"
        android:textSize="18sp"
        />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/holo_purple"
        android:contentDescription="@string/btn_sign_up"
        android:padding="16dp"
        android:text="Sign Up"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:layout_below="@+id/btn_login"
        />

    <ProgressBar
        android:id="@+id/loginProgress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />
</RelativeLayout>